tests/error/type_errors/binary_not_arith_right.err
Error: Operator not defined (at $FILE:6:11)
  | 
4 | @compile_guppy
5 | def foo(x: int) -> int:
6 |     return x + True
  |            ^^^^^^^^ Binary operator `+` not defined for `int` and `bool`

Guppy compilation failed due to 1 previous error
